--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "scheb/two-factor-bundle": "^3.9",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
+        "symfony/security-csrf": "^4.0",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/templating": "^4.0",
         "symfony/translation": "^4.0",
